--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     background-color: darkslategray;
+    font-size: 100%;
     font-family: 'Courier New', Courier, monospace;
 }
+
 h1 {
-    font-size: 72px
+    font-size: 3em;
 }
