--- a/style.css
+++ b/style.css
@@ -1,9 +1,34 @@
 body {
-    background-color: darkslategray;
+    background-color: rgb(229, 205, 182);
     font-size: 100%;
     font-family: 'Courier New', Courier, monospace;
 }
 
-h1 {
+#main-header{
     font-size: 3em;
+}
+
+#Navigation-Menu {
+    font-size: 110%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(71, 63, 63);
+}
+
+li a {
+    float: right;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    text-decoration: none;
+}
+li a:hover {
+    background-color: rgb(32, 31, 36)
+}
+
+#list {
+    list-style-type: circle;
 }
