--- a/style.css
+++ b/style.css
@@ -27,11 +27,11 @@ h3 {
 }
 
 #calc {
-    max-width: 100%;
     height: auto;
 }
 
 #projects {
+    width: 100%;
     display: grid;
     grid-template-columns: 23% 29%;
 }
